--- a/Public/contact.html
+++ b/Public/contact.html
@@ -1,8 +1,48 @@
-<H3>Contact Me</H3>
-<p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact</title>
+</head>
+<header>
+    <H3>Contact Me</H3>
+</header>
+
+<body>
+    <p>
     <ul>
-        <li>Mobile No:    9158054786</li>
-        <li>Email Id:     quashifshaikh@outlook.com</li>
-        <li>Address:      Room no 19, Manokamna Society No 22, Mhada Colony, Malwani, Malad (W). Mumbai 400095</li>
+        <pre>
+             <li>Mobile No:    9158054786</li>
+             <li>Email Id :    quashifshaikh@outlook.com</li>
+             <li>Address  :    Room no 19, Manokamna Society No 22, Mhada Colony,<br>              Malwani, Malad (W). Mumbai 400095</li>
+        </pre>
     </ul>
-</p>
+    <hr>
+    <h4>
+        Follow Me
+    </h4>
+    <p>(Click on images to View)</p>
+
+    <p>
+        <a href="https://www.linkedin.com/in/quashif-shaikh-9a4853236/" target="main"> <img src="./linkedin.jpg"
+                width="100" alt="Linked in Profile"></a>
+        <br>
+        <a href="https://www.instagram.com/quashif/" target="main"> <img src="./instagram-logo.png" width="60"
+                alt="Instagram"></a>
+        <br>
+        <a href="https://www.facebook.com/squashif" target="main"> <img src="./facebook.jpg" width="100" alt="Facebook">
+        </a>
+        <br>
+        <a href="https://medium.com/@quashifdeveloper" target="main"> <img src="./Medium.jpg" width="100"
+                alt="Medium"></a>
+        <br>
+        <a href="https://github.com/quashifshaikh" target="main"> <img src="./github.png" width="100" alt="github"></a>
+    </p>
+
+
+    </p>
+</body>
+
+</html>
